basic error codes, more structural tweaks

--- a/readme.textile
+++ b/readme.textile
@@ -1,4 +1,4 @@
-REAMDE
+h1. REAMDE
 
 view last commit @ http://ucla.github.io/SSOUI/
 
@@ -8,4 +8,5 @@ h2. view locally
 # navigate to that somewhere dir on the command line
 # $ @bundle install@
 # $ @bundle exec jekyll serve --baseurl ""@
+# if you want to theme $ @bundle exec compass watch@
 # visit 0.0.0.0:4000 in a browser of your choice
